tests/bad/types/1.tam
; Generated code for tests/bad/types/1.moc.
; Do not modify by hand
; no code
